<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:title="Suchen" />

        <item
            android:id="@+id/my_profile"
            android:title="Mein Profil" />

        <item
            android:id="@+id/my_rentals"
            android:title="Meine Ausleihen" />

        <item
            android:id="@+id/my_rented"
            android:title="Meine Leihgaben" />

    </group>

    <group
        android:id="@+id/menu_bot"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_settings"
            android:title="Einstellungen" />

        <item
            android:id="@+id/logout"
            android:title="Logout" />

    </group>
</menu>