<resources>
    <string name="app_name">AllRide</string>
    <string name="open">Öffne</string>
    <string name="close">Schließen</string>
    <string name="forgot_pw_text_view">Forgot your password?</string>
    <string name="forgot_pw_edit_email">Enter your E-Mail</string>
    <string name="forgot_pw_button">Reset Password</string>
    <string name="main_activity_greeting">Hallo!</string>
    <string name="main_activity_welcome_message">Willkommen bei AllRide</string>
...
    <string name="sign_up_no_password_toast">Bitte ein Passwort angeben!</string>
    <string name="sign_up_no_password_repeated_toast">Bitte das Passwort wiederholen!</string>
    <string name="sign_up_passwords_not_equal_toast">Passwörter stimmen nicht überein!</string>
    <string name="sign_up_password_requirements_toast">Das Passwort muss mindestens 8 Zeichen lang sein, eine Zahl und einen Buchstaben enthalten!</string>
    <string name="help_icon">help icon</string>
    <string name="login_passwort_vergessen">Passwort vergessen?</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_biketype">Wähle deinen gewünschten Fahrradtyp aus:</string>
    <string name="tab">\u0009</string>
    <string-array name="bike_types">
        <item>City</item>
        <item>Mountain</item>
...
