<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.joooonho.SelectableRoundedImageView
                android:id="@+id/user_picture"
                android:layout_width="70dp"
                android:layout_height="74dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="12dp"
                app:sriv_left_bottom_corner_radius="16dip"
                app:sriv_left_top_corner_radius="16dip"
                app:sriv_right_bottom_corner_radius="16dip"
                app:sriv_right_top_corner_radius="16dip" />

            <ListView
                android:id="@+id/list_user_properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:scrollbars="vertical" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_main" />

</android.support.v4.widget.DrawerLayout>
